tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions11(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions11.ts(5,20): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions11.ts (1 errors) ====
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  2. Let cu2 be ((cp – 65536) modulo 1024) + 0xDC00.
    // Although we should just get back a single code point value of 0xDC00,
    // this is a useful edge-case test.
    var x = /\u{DC00}/gu;
                       ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    